--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,5 +5,16 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
+    "faiss-cpu>=1.12.0",
+    "ipykernel>=6.30.1",
+    "langchain>=0.3.27",
+    "langchain-community>=0.3.29",
+    "langchain-google-genai>=2.1.10",
+    "langchain-groq>=0.3.8",
+    "pymupdf>=1.26.4",
+    "pypdf>=6.0.0",
+    "python-dotenv>=1.1.1",
+    "sentence-transformers>=5.1.0",
     "setuptools>=80.9.0",
+    "structlog>=25.4.0",
 ]
