updated:document comparison module with test.py

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "langchain-community>=0.3.29",
     "langchain-google-genai>=2.1.10",
     "langchain-groq>=0.3.8",
+    "pandas>=2.3.2",
     "pymupdf>=1.26.4",
     "pypdf>=6.0.0",
     "python-dotenv>=1.1.1",
