added: conversational RAG for single document chat

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,8 +14,10 @@ dependencies = [
     "pandas>=2.3.2",
     "pymupdf>=1.26.4",
     "pypdf>=6.0.0",
+    "pytest>=8.4.2",
     "python-dotenv>=1.1.1",
     "sentence-transformers>=5.1.0",
     "setuptools>=80.9.0",
+    "streamlit>=1.50.0",
     "structlog>=25.4.0",
 ]
