--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
+    "docx2txt>=0.9",
     "faiss-cpu>=1.12.0",
     "ipykernel>=6.30.1",
     "langchain>=0.3.27",
