--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.10"
 dependencies = [
     "docx2txt>=0.9",
     "faiss-cpu>=1.12.0",
+    "fastapi>=0.119.1",
     "ipykernel>=6.30.1",
     "langchain>=0.3.27",
     "langchain-community>=0.3.29",
@@ -17,8 +18,10 @@ dependencies = [
     "pypdf>=6.0.0",
     "pytest>=8.4.2",
     "python-dotenv>=1.1.1",
+    "python-multipart>=0.0.20",
     "sentence-transformers>=5.1.0",
     "setuptools>=80.9.0",
     "streamlit>=1.50.0",
     "structlog>=25.4.0",
+    "uvicorn>=0.38.0",
 ]
